configuration in progress